--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <title>Hooks Experiment</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="index.js"></script>
   </body>
